profile/themes/os_admin/scss/components/_forms.scss
input.form-autocomplete,
input.form-text,
input.form-tel,
input.form-email,
input.form-url,
input.form-search,
input.form-number,
input.form-color,
input.form-file,
input.form-date,
input.form-time,
textarea.form-textarea {
  background: $color-white;
  box-shadow: none;
  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
  transition: border linear 0.2s, box-shadow linear 0.2s;
  border: 1px solid $color-gray6;
  border-top-color: $color-gray6;
}
.cp-settings-form #edit-default-image {
  max-width: 900px;
}
/**** error msg color ****/
.form-item--error-message {
  color: $color-red;
}
/**** add from label ****/
label {
  span {
    &.block {
      width: 100%;
      display: block;
    }
  }
}
/**** global form label ****/
.form-item label.option {
  font-size: 0.923em;
}
/**** body fields bordercolor ****/
form {
  .cke_chrome,
  .filter-wrapper,
  .cke_top,
  .cke_bottom {
    border-color: $color-gray6;
  }
}

